--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -27,7 +27,7 @@
     width: 400px;
     height: 300px;
     background-color: #fff;
-    margin: 200px auto;
+    margin: 200px auto 180px auto;
     padding: 20px 40px;
     h2 {
       font-size: 30px;
